<resources>
    <string name="app_name">TimelyChefs</string>
    <string name="whatsnew">What\'s New?</string>
    <string name="whatelse">What Else?</string>
    <string name="imageoffood">Image of Food</string>
    <string name="lipsum">Loren Impsum</string>
    <string name="homebtn">Home</string>
    <string name="profilebtn">Profile</string>
    <string name="explorebtn">Explore</string>
    <string name="addnewrecipebtn">Add New Recipe</string>
    <string name="browsebtn">Browse</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirmpass">confirm Password</string>
    <string name="enteruser">Username</string>


    <!-- silas-->
    <string name="Info">About</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>

    <string name="remind_for_bed_time">Date and Time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>

    <string name="theme">Theme</string>
    <string name="light_dark">Light or Dark</string>

    <style name="Screen">
        <item name="android:background">#FFF</item>
    </style>

    <style name="Text">
        <item name="android:textColor">#000</item>
    </style>

    <style name="BUTTON">
        <item name="android:background">@android:color/holo_blue_dark</item>
        <item name="android:textColor">#FFF</item>
    </style>


    <string name="double_tap_to_seek">Language</string>
    <string name="seconds">English</string>
    <string name="pref_seek_val">pref_seek_val</string>

    <string name="Security">Security</string>
    <string name="specify_network_prefs">ID/Phone Number</string>
    <string name="pref_uploads">pref_uploads</string>

    <string name="enable_stats">Auto Updates</string>
    <string name="prefs_update">Version 3.5</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>

    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>

    <string-array name="pref_about_the_website">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="pref_seek_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_uploads">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>

</resources>