<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/blue1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/explorebutton"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/explorebtn"
            app:srcCompat="@drawable/explore" />

        <ImageView
            android:id="@+id/addnewrecipebutton"
            tools:layout_editor_absoluteY="12dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/addnewrecipebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar2"
            app:srcCompat="@drawable/createnewrecipe" />

        <ImageView
            android:id="@+id/browsebutton"
            tools:layout_editor_absoluteY="12dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/browsebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:srcCompat="@drawable/browse" />

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>