<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="Settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/explorebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/explorebtn"
            app:srcCompat="@drawable/explore"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/addnewrecipebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/addnewrecipebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar2"
            app:srcCompat="@drawable/createnewrecipe"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/browsebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/browsebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:srcCompat="@drawable/browse"
            tools:layout_editor_absoluteY="12dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/homebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/homebtn"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/profileicon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/profilebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:srcCompat="@drawable/profile"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteY="12dp" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/Home"
        android:layout_width="291dp"
        android:layout_height="142dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="1216dp"
        android:layout_marginBottom="2187dp"
        android:text="Home"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="348dp"
        android:layout_height="309dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="266dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:fontFamily="sans-serif-medium"
            android:text="Settings"
            android:textColor="#070505"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/GeneralPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="General" />

        <Button
            android:id="@+id/ProfilePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password" />

        <Button
            android:id="@+id/Homep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="notification" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>