<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Dashboard">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/homebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/homebtn"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/profileicon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/profilebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:srcCompat="@drawable/profile"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteY="12dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/explorebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/explorebtn"
            app:srcCompat="@drawable/explore"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/addnewrecipebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/addnewrecipebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar2"
            app:srcCompat="@drawable/createnewrecipe"
            tools:layout_editor_absoluteY="12dp" />

        <ImageView
            android:id="@+id/browsebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/browsebtn"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:srcCompat="@drawable/browse"
            tools:layout_editor_absoluteY="12dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="268dp"
        android:layout_height="89dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="497dp"
        android:text="Welcome, "
        style="@style/Text"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="253dp"
        android:layout_height="305dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="224dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <Button
            android:id="@+id/Recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Recipe" />

        <Button
            android:id="@+id/RecentViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recent Views" />

        <Button
            android:id="@+id/AllergyOp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Allergy Options" />

        <Button
            android:id="@+id/Updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Updates" />

        <Button
            android:id="@+id/Documents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Documents" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/HomePage"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:background="#040B1C"
        android:backgroundTint="#FFFFFF"
        android:text="Home"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="104dp" />

</androidx.constraintlayout.widget.ConstraintLayout>