<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include layout="@layout/layout_header"/>

    <include layout="@layout/layout_footer"/>

    <ImageView
        android:id="@+id/imageView_whatsnew"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/imageoffood"
        android:scaleType="centerCrop"
        android:src="@drawable/roast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_whatsNew"
        tools:src="@drawable/roast" />

    <TextView
        android:id="@+id/textView_whatsNew"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/whatsnew"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView_whatElse"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/whatelse"
        android:textAppearance="@style/HeaderText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_caption"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textView_caption"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:text="@string/lipsum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_whatsnew" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_whatElse">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/imageView_whatsnew3"
                    android:layout_width="175dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/imageoffood"
                    android:scaleType="centerCrop"
                    android:src="@drawable/roast"
                    tools:src="@drawable/roast" />

                <TextView
                    android:id="@+id/textView_caption3"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="0dp"
                    android:padding="5dp"
                    android:text="@string/lipsum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/imageView_whatsnew4"
                    android:layout_width="175dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/imageoffood"
                    android:scaleType="centerCrop"
                    android:src="@drawable/roast"
                    tools:src="@drawable/roast" />


                <TextView
                    android:id="@+id/textView_caption4"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="0dp"
                    android:padding="5dp"
                    android:text="@string/lipsum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/imageView_whatsnew2"
                    android:layout_width="175dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/imageoffood"
                    android:scaleType="centerCrop"
                    android:src="@drawable/roast"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@drawable/roast" />


                <TextView
                    android:id="@+id/textView_caption2"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginStart="0dp"
                    android:padding="5dp"
                    android:text="@string/lipsum" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>